# Olympia--The-Age-of-Gods-PBEM

./: .gitattributes  .gitignore  AUTHORS.md  BUILDING.md  CMAKE.md  CMakeLists.txt  HISTORY.md  LICENSE  README.md  README_install  RELEASE
mapgen/: Cities  Makefile  Map1  Names  README.md  Regions  Regions.orig  count.c  gate  ilist.c  ilist.h  ilist_test.c  lists.c  lists.h  loc  map.out  mapgen.c  mapgen.h  pick.c  prng_test.h  random.c  random.h  random_test.c  randseed  rlist.c  rnd.c  road  tags  z.c  z.h
mapgen/oldmaps/: Land-  Map  Map.old  Map.orig  Map.q  Map.z  Regions-  lll
src/: .produce.c.swp  Makefile  README.md  add.c  adv.c  alchem.c  art.c  artifacts.c  artifacts.h  basic.c  beast.c  build.c  build.h  buy.c  c1.c  c2.c  check.c  checkcode  checkcode.c  cloud.c  code.c  code.h  combat.c  combat.h  day.c  dir.c  dir.h  display.c  display.h  eat.c  eat.h  effect.c  effect.h  etc.h  faery.c  forward.h  garr.c  garr.h  gate.c  glob.c  (+61 more)
src/checkcode/: main.c
src/lib/: Makefile  README  defines  index_times_head  index_times_tail  item  item~  nation.1nation  nation.3nation  skill  skill.mods  system  system.orig
src/mapgen/: README  ilist.c  ilist_test.c  ilist_test.h  mapgen.c  mapgen.h  prng.c  prng.h  prng_test.c  random_test.h  rlist.h  road.h  sfc32_test.h  tile.h  z.c  z.h
src/memory/: memory.c  memory.h
src/oly/: add.c  adv.c  alchem.c  art.c  artifacts.c  basic.c  beast.c  build.c  build.h  buy.c  c1.c  c2.c  check.c  code.c  combat.c  day.c  dir.c  display.c  display.h  eat.c  eat.h  effect.c  effect.h  etc.h  faery.c  forward.h  garr.c  gate.c  glob.c  gm.c  hades.c  helpers.c  ilist.c  immed.c  input.c  io.c  kill.c  kill.h  loc.c  loc.h  (+42 more)
src/os/: generic.h  linux.c  linux.h  mac.c  mac.h  windows.c  windows.h
src/prng_test/: main.c
src/random/: random.c  random.h  random_test.c  sfc32.c  sfc32.h  sfc32_test.c
src/vectors/: README.md  accept_ent_list.c  accept_ent_list.h  admit_list.c  admit_list.h  cs_list.c  cs_list.h  eb_list.c  eb_list.h  effect_list.c  effect_list.h  entity_player_list.c  entity_player_list.h  exit_view_list.c  exit_view_list.h  fe_list.c  fe_list.h  fight_list.c  fight_list.h  ilist.c  ilist.h  ilist_test.c  item_ent_list.c  item_ent_list.h  mklist.sh  order_list_list.c  order_list_list.h  req_ent_list.c  req_ent_list.h  rlist.c  rlist.h  rlist_test.c  roads.c  roads.h  roadsv_test.c  skill_ent_list.c  skill_ent_list.h  tiles.c  tiles.h  tlist.c  (+9 more)
utils/: addplayer.pl  build.sh  charemail.pl  checkmail.pl  conv.c  conv.h  crontab.txt  easymap.pl  htmler.c  mailsplit.c  makeEmailHeader.pl  map.pl  postprocess.pl  rep  runoly  runturn.pl  scanner  splitreport.pl  tagacct.c  tags.c  tags.h  tagstatus  text_filter.c  texter.c  untangle.c  z.c  z.h
websetup/: README_setup  edit_orders.php  edit_orders_submit.php  makeorders  mapshare.php  mapshare.pl  mapshare_single.php  mapshare_submit.php  missive.php  missivesubmit.php  orders_topnotes  orderssubmissionform.php  orderssubmit.php  orderssubmit.pl
www/History.3/: .turn137.html.swp  chapter1.php  chapter2.php  chapter3.php  chapter4.php  chapter5.php  index.php  replace.pl  turn101.php  turn104.php  turn105-2.php  turn105.php  turn108.php  turn113-2.php  turn113-3.php  turn113-4.php  turn113.php  turn116-2.php  turn116.php  turn117-2.php  turn117-3.php  turn117-4.php  turn117.php  turn118.php  turn119.php  turn120.php  turn126.php  turn132.php  turn134.php  turn135.php  turn136-2.php  turn136.php  turn137-2.php  turn137-3.php  turn137-4.php  turn137.php  turn138-2.php  turn138-3.php  turn138.php  turn139-2.php  (+48 more)
www/History.3/info/: aa02.html  aa03.html  aa04.html  aa0b.html  aa0c.html  aa0d.html  aa52.html  aa53.html  aa54.html  aa55.html  aa56.html  aa57.html  aa58.html  ab01.html  ab02.html  ab04.html  ab05.html  ab32.html  ab33.html  ab34.html  ab35.html  ab49.html  ab50.html  ab51.html  ab52.html  ab53.html  ab54.html  ab55.html  ab56.html  ab57.html  ab58.html  ac01.html  ac03.html  ac04.html  ac05.html  ac06.html  ac07.html  ac08.html  ac09.html  ac10.html  (+1268 more)
www/css/: bodyend.inc  bot.inc  menu.inc  menu2.inc  style.css  top.inc
www/docs/: diplomatic_email.php  makingmoney.php  newbiescrolls.php  tagprimer.php  tips.php
